# event-service

./: .gitignore  Cargo.toml  README.md
src/: envelope.rs  main.rs  schema.rs
src/db/: comments.rs  dto.rs  events.rs  mod.rs  models.rs
src/event_service/: db.rs  dto.rs  mod.rs  models.rs  schema.rs
src/rest/: comments.rs  dto.rs  envelope.rs  events.rs  mod.rs
