[package]
name = "event-service"
version = "0.1.0"
authors = ["Jon Ole Killie <jon.ole@killie.org>"]
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.33"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.13.0"
